# volume-locker

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  config.toml  main.cpp
.github/workflows/: ci.yml
src/: main.rs
