[package]
name = "volume-locker"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security",
] }
windows-core = "0.62.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
